@@ -14,7 +14,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: radix.h,v 1.5 2007/09/28 00:11:32 each Exp $ */
+/* $Id: radix.h,v 1.6 2008/01/17 08:08:08 each Exp $ */
 
 /*
  * This source was adapted from MRT's RCS Ids:
@@ -36,13 +36,18 @@
 
 #define NETADDR_TO_PREFIX_T(na,pt,bits) \
 	do { \
-	        memset(&(pt), 0, sizeof(pt)); \
-                if((bits) && (na) != NULL) { \
-		        memcpy(&(pt).add.sin, &(na)->type.in, ((bits)+7)/8); \
-		        (pt).bitlen = (bits); \
-		        (pt).family = (na)->family; \
-                } else \
-		        (pt).family = AF_INET; \
+		memset(&(pt), 0, sizeof(pt)); \
+		if((bits) && (na) != NULL) { \
+			(pt).family = (na)->family; \
+			(pt).bitlen = (bits); \
+			if ((pt).family == AF_INET6) { \
+				memcpy(&(pt).add.sin6, &(na)->type.in6, \
+				       ((bits)+7)/8); \
+			} else \
+				memcpy(&(pt).add.sin, &(na)->type.in, \
+				       ((bits)+7)/8); \
+		} else \
+			(pt).family = AF_INET; \
 		isc_refcount_init(&(pt).refcount, 0); \
 	} while(0)
 
